--- a/A3/app/build.gradle
+++ b/A3/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion '28.0.3'
 
     defaultConfig {
-        applicationId "course.examples.Fragments.DynamicLayout"
+        applicationId "com.example.a3"
         minSdkVersion 22
         targetSdkVersion 28
     }
