--- a/A3/app/src/main/AndroidManifest.xml
+++ b/A3/app/src/main/AndroidManifest.xml
@@ -7,6 +7,8 @@
         android:description="@string/permission_description"
         android:protectionLevel="dangerous" />
 
+    <uses-permission android:name="com.example.a3.edu.uic.cs478.f20.kaboom" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -14,6 +16,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+<!--        android:exported="true">-->
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,5 +26,7 @@
             </intent-filter>
         </activity>
     </application>
+
+
 
 </manifest>
