--- a/A1/app/src/main/AndroidManifest.xml
+++ b/A1/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.a1">
 
-    <uses-permission android:name="com.example.a3.edu.uic.cs478.f20.kaboom" />
+    <uses-permission android:name="edu.uic.cs478.f20.kaboom" />
 
     <application
         android:allowBackup="true"
@@ -11,8 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity2"
-            android:noHistory="true"></activity>
+        <activity android:name=".MainActivity2"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
